force-app/main/default/objects/vf_Role__c/vf_Role__c.object-meta.xml
<CustomObject>
    <label>Role</label>
    <pluralLabel>Roles</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Role Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store volunteer role types and requirements</description>
</CustomObject>