force-app/main/default/objects/vf_Role__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Detailed description of the role</description>
    <inlineHelpText>Detailed description of the role, its responsibilities, and expectations</inlineHelpText>
</CustomField>