force-app/main/default/objects/vf_Role__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>vf_Project__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
    <description>Project this role is associated with</description>
    <inlineHelpText>The project this role is defined for</inlineHelpText>
</CustomField>