force-app/main/default/objects/vf_Role__c/fields/Recommended_Skills__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Skills__c</fullName>
    <label>Recommended Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of recommended (but not required) skills for the role</description>
    <inlineHelpText>List of recommended skills for the role. Stored in JSON format.</inlineHelpText>
</CustomField>