force-app/main/default/objects/vf_Role__c/fields/Required_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Required_Certifications__c</fullName>
    <label>Required Certifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of certifications required for the role</description>
    <inlineHelpText>List of certifications required for the role. Stored in JSON format.</inlineHelpText>
</CustomField>