force-app/main/default/objects/vf_Role__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <label>Required Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of skills required for the role</description>
    <inlineHelpText>List of skills required for the role. Stored in JSON format.</inlineHelpText>
</CustomField>